# diminish

./: Cargo.toml  README.md
src/: bit.rs  lib.rs  lookup.rs
